0.1.11  xx-xxx-xxxx
  o Remove support for configuring Tor's User and Group options in the 
    Advanced settings page.


0.1.10  02-Nov-2008
  o Add a prettier dialog for prompting people for their control port password
    that also includes a checkbox for whether the user wants Vidalia to remember
    the entered password, a Help button, and a Reset button (Windows only).
  o Fix a crash bug that occurred when the user clicks 'Clear' in the message
    log toolbar followed by 'Save All'. (Ticket #434)
  o Uncheck the Torbutton options by default in the Windows bundle installer
    if Firefox is not installed. (Ticket #421)
  o Add an Windows bundle installer page that warns the user that they should
    install Firefox, if it looks like they haven't already done so. (Ticket
    #421)


0.1.9   02-Sep-2008
  o Create the control panel's menubar as a parentless QMenuBar, so it is 
    visible even if the control panel is not the topmost window. (Ticket #286)
  o Add a context menu with a "copy" option to RouterDescriptorView? so 
    users can copy some text to the clipboard. (Ticket #291)
  o Make the Tor status label and Vidalia tray icon tooltip display the same
    text after a circuit is established. (Ticket #390)
  o Correct the location of the simplified Chinese help files so they will
    actually load again.
  o Try to load a translation for the current language from Qt's translations
    directory, so we can get Qt's internal widgets (e.g. QDialogButtonBox)
    translated. (Ticket #375)
  o Use "$\r$\n" in the MessageBox strings in the Windows installer 
    translations, so the newlines appear properly. (Ticket #411)
  o Grab the Qt .dlls included in the Vidalia installer directly from the
    configured Qt binary directory (as specified by ${QT_BINARY_DIR}).
  o Add OPENSSL_BINARY_DIR and MINGW_BINARY_DIR cmake options that can be
    used to specify where the Windows installer NSIS scripts should look