@@ -1,6 +1,9 @@
 0.1.11  xx-xxx-xxxx
   o Remove support for configuring Tor's User and Group options in the 
     Advanced settings page.
+  o Only set HttpsProxy if both the "I use a proxy..." checkbox and the 
+    "Use this proxy for HTTPS also" checkboxes are checked. Otherwise,
+    unset it. (Ticket #440)
 
 
 0.1.10  02-Nov-2008
